# namless-idle-tui

./: .gitignore  AGENTS.md  COMPLETE.md  DEVELOPMENT.md  IDEAS.md  IMPLEMENT-MVP.md  README.md  REQUIREMENTS-GUIDE.md  pyproject.toml  requirements-dev.txt  requirements-simple.txt  requirements-web.txt  requirements.txt  reset_game.py  start_web.py  textual-readme.md
.github/workflows/: ci.yml
docs/: README.md
docs-legacy/game-engine/: COMPARISON.md  README.md
docs-legacy/game-engine-plan/: 01-core-infrastructure.md  02-passive-income.md  03-animation-engine.md  06-particle-effects.md  09-testing-polish.md  10-documentation.md
docs-legacy/game-engine/exploration/: 01-asciimatics.md  03-blessed.md  04-rich-animations.md  05-prompt-toolkit.md  06-urwid.md  10-asyncio-animations.md  11-numpy-physics.md
docs-legacy/game-engine/option1-textual-canvas/: README.md  implementation.md
docs-legacy/game-engine/v2/: README.md
docs-legacy/game-engine/v2/strategy1-sprite-sheets/: implementation.md
docs-legacy/game-engine/v2/strategy2-layered-composition/: README.md
docs-legacy/game-engine/v2/strategy3-entity-component/: README.md  implementation.md
docs-legacy/themes/: 02-deep-sea-colony.md  05-dream-weaver.md  06-void-sculptor.md  07-time-loop-cafe.md  08-spectral-library.md  09-nano-assembly.md  10-emotion-merchant.md
docs-legacy/tui/: idle-game-number-best-practices.md  implementation-plan-streaming.md
docs/architecture/: game-engine.md
docs/game-design/: alchemy.md  mechanics.md  overview.md  prestige.md  resources.md  shop-system.md
docs/game-engine-plan/: 00-overview.md  04-gold-coin-animation.md  05-manual-click.md  07-treasure-system.md  08-progressive-features.md
docs/game-engine/exploration/: 00-summary.md  02-pyxel.md  07-pygame-terminal.md  08-tcod.md  09-bearlibterminal.md  12-pillow-sprites.md
docs/game-engine/option2-rich-animations/: README.md  implementation.md
docs/game-engine/option3-async-gameloop/: README.md  implementation.md
docs/game-engine/v2/: COMPARISON.md
docs/game-engine/v2/strategy1-sprite-sheets/: README.md
docs/technical/: database-schema.md
docs/themes/: 01-cosmic-expansion.md  03-digital-consciousness.md  04-mycorrhizal-network.md  README.md
docs/tui/: implementation-plan-textual.md  plan.md  streaming-tui-architecture.md
src/idle_game/: app.py  database.py  models.py
src/idle_game/styles/: main.tcss
src/idle_game/widgets/: clicker.py  counter.py
tests/: test_database.py  test_models.py
(+1 files in other folders)
